# smart_hive

./: .coverage  .env.example  404.html  README.md  chatgpt.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: deploy-docs.yml
.husky/: pre-commit
adr/: index.html
adr/001-agent-framework-selection/: index.html
architecture/agent_architecture/: index.html
architecture/agent_communication/: index.html
architecture/agent_ecosystem/: index.html
architecture/data_model/: index.html
architecture/system_architecture/: index.html
architecture/user_personalization/: index.html
development/agent_development/: index.html
development/backend_development/: index.html
development/deployment/: index.html
development/frontend_development/: index.html
development/testing/: index.html
docs/: index.md  tags.md
docs/adr/: 001-agent-framework-selection.md  002-agent-design-patterns.md  README.md
docs/architecture/: agent_architecture.md  agent_communication.md  agent_ecosystem.md  data_model.md  system_architecture.md  user_personalization.md
docs/assets/stylesheets/: extra.css
docs/development/: agent_development.md  backend_development.md  deployment.md  frontend_development.md  testing.md
docs/roadmap/: backlog.md  features.md  issue_1_update.md  milestones.md
docs/roadmap/milestones/: 02-meta-agents.md
docs/testing/: llm_testing.md
docs/workflows/: agent_collaboration.md  agent_workflows.md  ci_cd_pipeline.md  development_workflows.md
examples/: control_plane_demo.py
roadmap/backlog/: index.html
roadmap/features/: index.html
roadmap/milestones/: index.html
scripts/: create_issues.sh
search/: search_index.json
site/: 404.html  index.html
site/architecture/agent_architecture/: index.html
site/architecture/agent_communication/: index.html
site/architecture/agent_ecosystem/: index.html
site/architecture/data_model/: index.html
site/architecture/system_architecture/: index.html
site/architecture/user_personalization/: index.html
site/development/agent_development/: index.html
site/development/backend_development/: index.html
site/development/deployment/: index.html
site/development/frontend_development/: index.html
site/development/testing/: index.html
site/roadmap/backlog/: index.html
site/roadmap/features/: index.html
site/search/: search_index.json
src/smart_hive/: __init__.py  main.py  scripts.py
tests/: conftest.py
tests/mocks/: llama_agents.py
workflows/agent_collaboration/: index.html
workflows/agent_workflows/: index.html
workflows/ci_cd_pipeline/: index.html
workflows/development_workflows/: index.html
(+24 files in other folders)
