[tool.poetry]
packages = [{include = "smart_hive", from = "src"}]
name = "smart-hive"
version = "0.1.0"
description = "Ecosistema SmartHive basado en agentes inteligentes."
authors = ["Ricardo Reyes <reyesramirezricardoemanuel@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
swarm = {git = "https://github.com/openai/swarm.git"}
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.48"
mkdocs-minify-plugin = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-tests = "smart_hive.scripts:run_tests"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
